data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3852.wast
;; 1. **Call Imported Function with Incorrect Parameter Count**:    - **Reasoning**: This test checks the correct handling of calls to imported functions when the number of arguments on the stack mismatches the expected count.    - **Description**: Define a module that imports a function expecting three arguments, then call this function with only two arguments provided. The differential behavior could be observed in how each implementation handles stack manipulation and error reporting.

(assert_invalid
  (module
    (import "env" "imported_function" (func (param i32 i32 i32)))
    (func (call 0 (i32.const 1) (i32.const 2)))
  )
  "type mismatch"
)